Performance improvement
* It took 7 to 8 sec for neoclojure#complete#test() previously
* Now it only takes 3 sec.